fix headshot clipping

--- a/styles.css
+++ b/styles.css
@@ -299,14 +299,15 @@ body {
 }
 
 .portrait {
-    width: min(30vh, 40vw);
-    height: auto; 
+    width: min(30vh, 30vw);
+    height:auto; 
     max-width: 100%; 
     max-height: 100%; 
     display: flex;
     align-items: center;
     justify-content: center;
     overflow: hidden; 
+    padding: 3px;
 }
 
 .portrait img {
@@ -314,7 +315,7 @@ body {
     height: auto; 
     display: block; 
     border-radius: 50%;
-    border: 2px solid white;
+    border: 3px solid white;
 }
 
 .body_text {
